--- a/src/main/webapp/css/_templates.scss
+++ b/src/main/webapp/css/_templates.scss
@@ -2,8 +2,8 @@
     _templates.scss: css config of inofix templates
 
     Created:    2017-07-05 17:26 by Christian Berndt
-    Modified:   2017-11-05 20:13 by Christian Berndt
-    Version:    1.2.6
+    Modified:   2017-11-12 16:53 by Christian Berndt
+    Version:    1.2.7
 */
 
 @import "variables";
@@ -551,7 +551,9 @@ h4 {
         }
         
         img {
-            max-width: 400px;
+            max-width: 100%;
+            padding-left: 15px;
+            padding-right: 15px;
         }
 
     }
